--- a/src/app/views/home.component.html
+++ b/src/app/views/home.component.html
@@ -18,36 +18,30 @@
                     </div>
                 </nz-header>
                 <nz-content>
-                    <div nz-row>
-                        <div nz-col nzSpan="12">
-                            <div class="block-left">
-                                <h1>
-                                    HiCooper
-                                </h1>
-                                <p>
-                                    Components, Auth & Security for your next Angular App
-                                </p>
-                                <div class="operate">
-                                    <button nz-button nzSize="large" nzType="default" class="btn left">GET STARTED
-                                    </button>
-                                    <button nz-button nzSize="large" nzType="default" class="btn right">DEMO</button>
-                                </div>
-                            </div>
+                    <div class="block-left">
+                        <h1>
+                            HiCooper
+                        </h1>
+                        <p>
+                            Components, Auth & Security for your next Angular App
+                        </p>
+                        <div class="operate">
+                            <button nz-button nzSize="large" nzType="default" class="btn left">GET STARTED
+                            </button>
+                            <button nz-button nzSize="large" nzType="default" class="btn right">DEMO</button>
                         </div>
-                        <div nz-col nzSpan="12">
-                            <div class="block-right">
-                                <div class="shield">
-                                    <h3>Not Just Another</h3>
-                                    <h3>UI Kit</h3></div>
-                            </div>
+                    </div>
+                    <div class="block-right">
+                        <div class="shield">
+                            <h3>Not Just Another</h3>
+                            <h3>UI Kit</h3>
                         </div>
                     </div>
 
                 </nz-content>
             </nz-layout>
         </div>
-        <svg class="concave" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1920 222"
-             xmlns="http://www.w3.org/2000/svg">
+        <svg class="concave" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1920 222" xmlns="http://www.w3.org/2000/svg">
             <defs>
                 <style>.cls-1 {
                     fill: #fff;
@@ -56,8 +50,7 @@
             <title>concave</title>
             <g data-name="Layer 2" id="Layer_2">
                 <g data-name="Layer 4" id="Layer_4">
-                    <path class="cls-1"
-                          d="M1920,0c-248.44,93.45-587.33,151.09-960.52,151.09S248.44,93.45,0,0V222H1920Z"></path>
+                    <path class="cls-1" d="M1920,0c-248.44,93.45-587.33,151.09-960.52,151.09S248.44,93.45,0,0V222H1920Z"></path>
                 </g>
             </g>
         </svg>
@@ -65,7 +58,7 @@
 
     <div class="feature">
         <nz-card *ngFor="let item of featureList" class="hvr-float">
-            <img [src]="item.imgUrl"/>
+            <img [src]="item.imgUrl" />
             <h2>{{item.title}}</h2>
             <p>{{item.desc}}</p>
         </nz-card>
@@ -75,12 +68,12 @@
         <div class="content-center">
             <nz-card *ngFor="let item of advantageList">
                 <h2>
-                        <span>
-                            <i nz-icon type="minus" theme="outline" style="color: #3381ff"></i>
-                        </span>
                     <span>
-                            {{item.title}}
-                        </span>
+                        <i nz-icon type="minus" theme="outline" style="color: #3381ff"></i>
+                    </span>
+                    <span>
+                        {{item.title}}
+                    </span>
                 </h2>
                 <p>{{item.desc}}</p>
             </nz-card>
@@ -95,15 +88,10 @@
             <div>
                 <ul>
                     <li><strong class="title">More from HiCooper</strong></li>
-                    <li><a
-                            href="#"
-                            target="_blank">Homepage</a></li>
-                    <li><a
-                            href="#">React
-                        Native UI Kitten</a></li>
-                    <li><a
-                            href="#"
-                            target="_blank">ngx-admin</a></li>
+                    <li><a href="#" target="_blank">Homepage</a></li>
+                    <li><a href="#">React
+                            Native UI Kitten</a></li>
+                    <li><a href="#" target="_blank">ngx-admin</a></li>
                 </ul>
             </div>
         </div>
@@ -111,18 +99,10 @@
             <div>
                 <ul>
                     <li><strong class="title">Follow Us</strong></li>
-                    <li class="social"><a
-                            href="#"
-                            target="_blank"><i
-                            class="small-social-github"></i></a><a
-                            href="#" target="_blank"><i
-                            class="small-social-twitter"></i></a><a
-                            href="#"
-                            target="_blank"><i
-                            class="small-social-facebook"></i></a></li>
-                    <li class="copy"> © 2015-2018 <a
-                            href="#"
-                            target="_blank">HiCooper LLC</a><br>
+                    <li class="social"><a href="#" target="_blank"><i class="small-social-github"></i></a><a href="#"
+                            target="_blank"><i class="small-social-twitter"></i></a><a href="#" target="_blank"><i
+                                class="small-social-facebook"></i></a></li>
+                    <li class="copy"> © 2015-2018 <a href="#" target="_blank">HiCooper LLC</a><br>
                         Documentation licensed under CC BY 4.0.
                     </li>
                 </ul>
