update img path

--- a/src/app/views/home.component.html
+++ b/src/app/views/home.component.html
@@ -41,7 +41,8 @@
                 </nz-content>
             </nz-layout>
         </div>
-        <svg class="concave" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1920 222" xmlns="http://www.w3.org/2000/svg">
+        <svg class="concave" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1920 222"
+             xmlns="http://www.w3.org/2000/svg">
             <defs>
                 <style>.cls-1 {
                     fill: #fff;
@@ -50,7 +51,8 @@
             <title>concave</title>
             <g data-name="Layer 2" id="Layer_2">
                 <g data-name="Layer 4" id="Layer_4">
-                    <path class="cls-1" d="M1920,0c-248.44,93.45-587.33,151.09-960.52,151.09S248.44,93.45,0,0V222H1920Z"></path>
+                    <path class="cls-1"
+                          d="M1920,0c-248.44,93.45-587.33,151.09-960.52,151.09S248.44,93.45,0,0V222H1920Z"></path>
                 </g>
             </g>
         </svg>
@@ -58,7 +60,7 @@
 
     <div class="feature">
         <nz-card *ngFor="let item of featureList" class="hvr-float">
-            <img [src]="item.imgUrl" />
+            <img [src]="item.imgUrl"/>
             <h2>{{item.title}}</h2>
             <p>{{item.desc}}</p>
         </nz-card>
@@ -82,7 +84,7 @@
 
     <div class="footer content-center">
         <div class="logo">
-            <img src="../../assets/img/hicooper-logo.png" alt="">
+            <img src="assets/img/hicooper-logo.png" alt="">
         </div>
         <div class="block-one">
             <div>
@@ -90,7 +92,7 @@
                     <li><strong class="title">More from HiCooper</strong></li>
                     <li><a href="#" target="_blank">Homepage</a></li>
                     <li><a href="#">React
-                            Native UI Kitten</a></li>
+                        Native UI Kitten</a></li>
                     <li><a href="#" target="_blank">ngx-admin</a></li>
                 </ul>
             </div>
@@ -100,8 +102,9 @@
                 <ul>
                     <li><strong class="title">Follow Us</strong></li>
                     <li class="social"><a href="#" target="_blank"><i class="small-social-github"></i></a><a href="#"
-                            target="_blank"><i class="small-social-twitter"></i></a><a href="#" target="_blank"><i
-                                class="small-social-facebook"></i></a></li>
+                                                                                                             target="_blank"><i
+                            class="small-social-twitter"></i></a><a href="#" target="_blank"><i
+                            class="small-social-facebook"></i></a></li>
                     <li class="copy"> © 2015-2018 <a href="#" target="_blank">HiCooper LLC</a><br>
                         Documentation licensed under CC BY 4.0.
                     </li>
